# FaceAuth

./: .gitignore  =4.8.0  API_DOCUMENTATION.md  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DECRYPTION_IMPLEMENTATION_COMPLETE.md  DEMO_SCRIPT.md  DOCUMENTATION_INDEX.md  GUI_COMPLETION_REPORT.md  GUI_SOLUTION_SUMMARY.md  GUI_WORKFLOW.md  IMPLEMENTATION_SUMMARY.md  INSTRUCTIONS.md  ISSUE_8_SUMMARY.md  LICENSE  PRIVACY_POLICY.md  PROJECT_STATUS_FINAL.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  SECURITY_COMPLIANCE_CHECKLIST.md  SETUP.md  TESTING_IMPLEMENTATION_COMPLETE.md  THREAT_MODEL.md  TROUBLESHOOTING.md  auth_demo.py  authentication.py  compliance_report.json  comprehensive_demo.py  crypto.py  debug_encryption.py  decryption_demo.py  demo.py  demo_gui.py  demo_main.py  encryption_demo.py  enhanced_demo.py  enrollment.py  example_usage.py  (+29 more)
assets/: README.md  VISUAL_ASSETS_PLAN.md
assets/diagrams/: architecture_diagram.md  workflow_diagrams.md
assets/screenshots/: SCREENSHOT_PLAN.md
docs/: API_REFERENCE.md  CONTRIBUTING.md  DEMO_PLANNING.md  FAQ.md  GUI_GUIDE.md  ONBOARDING.md  PROJECT_OVERVIEW.md  ROADMAP.md  SECURITY.md  SETUP_GUIDE.md  TESTING.md  TROUBLESHOOTING.md  USER_GUIDE.md
faceauth/: __init__.py  authentication.py  crypto.py  enrollment.py  face_model.py  file_handler.py  gui.py
faceauth/cli/: __init__.py  completion.py  config.py
faceauth/core/: __init__.py  authentication.py  enrollment.py
faceauth/crypto/: __init__.py  file_encryption.py  key_derivation.py
faceauth/monitoring/: performance_monitor.py
faceauth/security/: __init__.py  access_control.py  audit_logger.py  compliance_checker.py  encryption_manager.py  memory_manager.py  privacy_manager.py  secure_storage.py
faceauth/utils/: __init__.py  security.py  storage.py
scripts/: setup_unix.sh  setup_windows.ps1
tests/: TEST_DOCUMENTATION.md  __init__.py  conftest.py  run_tests.py  test_authentication.py  test_basic.py  test_cli.py  test_crypto.py  test_encryption.py  test_enrollment.py  test_file_encryption.py  test_file_handler.py  test_integration.py  test_performance.py  test_security.py  test_smoke.py
